syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "ForDem.Grpc";

service Authentication {
  rpc GetJwt (google.protobuf.Empty) returns (JsonWebToken);
}

message JsonWebToken {
  string value = 1;
}
