syntax = "proto3";
option csharp_namespace = "Mastodon.Grpc";

service Authentication {
  rpc SignIn (SignInRequest) returns (JsonWebToken);
}

message JsonWebToken {
  string value = 1;
}

message SignInRequest {
	bytes publicKey = 1;
	bytes digitalSignature = 2;
}